--- a/charts/karpenter/Chart.yaml
+++ b/charts/karpenter/Chart.yaml
@@ -1,6 +1,11 @@
 apiVersion: v2
 name: karpenter
-description: A Helm chart for deploying Karpenter controller and provisioners
+description: Helm chart for deploying AWS Karpenter
 type: application
 version: 0.1.0
-appVersion: "v0.34.0" # (latest stable Karpenter controller version)
+appVersion: "1.3.0"
+
+dependencies:
+  - name: karpenter
+    version: "1.3.0"
+    repository: oci://public.ecr.aws/karpenter
